<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/historyCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    card_view:cardBackgroundColor="@color/colorMainBackgroundSecondary"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/margin_standard"
        android:paddingStart="@dimen/margin_standard"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/historyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/history_item_date"/>

            <TextView
                android:id="@+id/historyElaspedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/history_item_elasped_time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/historyRounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/history_item_rounds"/>

            <TextView
                android:id="@+id/historyWorkRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/history_item_times"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
